--- a/style.css
+++ b/style.css
@@ -13,3 +13,13 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
 }
+h2{
+    margin-left: 20px;
+}
+.popular{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
