--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
 }
+.searchBox{
+    margin-left: 0 auto;
+    text-align: center;
+}
 h2{
     margin-left: 20px;
 }
